# RKN-as-a-Service

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  inverse_square_root_gram_matrix_computer.ipynb  scalability_analysis_exp_result_plotter.ipynb
apps/: helper.cpp
apps/rkn/: proxy.cpp
core/: Party.h  core.h  rkn.h
exp_runners/: aupr_delta_exp.sh  aupr_num_parties_exp.sh  aupr_num_samples_exp.sh  aupr_unbalanced_exp.sh  auroc_no_tie_delta_exp.sh  auroc_no_tie_num_parties_exp.sh  auroc_no_tie_num_samples_exp.sh  auroc_no_tie_unbalanced_exp.sh  auroc_with_tie_delta_exp.sh  auroc_with_tie_num_parties_exp.sh  auroc_with_tie_num_samples_exp.sh  auroc_with_tie_unbalanced_exp.sh
exp_runners/rkn_experiments/: benchmark.sh  pprkn_synthetic_test.sh  real_data_experiments.sh  synthetic_data_experiments.sh
exp_runners/rkn_experiments/pprkn_inference_results/real/: p0_128_10_1_lan_a.102.1_12_102.csv  p0_16_8_1_LAN_a.101.1_0_128.csv  p0_16_8_1_LAN_a.101.1_4_128.csv  p0_2_4_1_LAN_a.101.1_0_0.csv  p0_2_4_1_LAN_a.101.1_0_32.csv  p1_128_10_1_lan_a.102.1_12_102.csv  p1_16_8_1_LAN_a.101.1_0_128.csv  p1_16_8_1_LAN_a.101.1_4_128.csv  p1_2_4_1_LAN_a.101.1_0_0.csv  p1_2_4_1_LAN_a.101.1_0_32.csv
exp_runners/rkn_experiments/pprkn_inference_results/synthetic/: p0_128_8_128_1_lan.csv  p0_128_8_128_1_wan.csv  p0_128_8_128_2_lan.csv  p0_128_8_128_2_wan.csv  p0_128_8_128_3_lan.csv  p0_128_8_128_3_wan.csv  p0_128_8_128_4_lan.csv  p0_128_8_128_4_wan.csv  (+332 more)
utils/: AesCtrRbg.h  connection.h  constant.h  flib.h  llib.h  parse_options.cpp  parse_options.h  test_functions.h
(+682 files in other folders)
